--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,9 +6,12 @@ body {
 
 #content {
     display: grid;
-    /*grid-template-columns: 30% 20% 50%;*/
-    /*grid-template-columns: 1fr 1fr 1fr;*/
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, minmax(200px, auto));
+    /*grid-column-gap: 10px;
+    grid-row-gap: 10px;*/
+    grid-gap: 10px;
+    /*grid-auto-rows: minmax(200px, auto);  */  
     max-width: 960px;
     margin: 0 auto;
 }
