--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,12 +6,9 @@ body {
 
 #content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, minmax(200px, auto));
-    /*grid-column-gap: 10px;
-    grid-row-gap: 10px;*/
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(4, minmax(150px, auto));
     grid-gap: 10px;
-    /*grid-auto-rows: minmax(200px, auto);  */  
     max-width: 960px;
     margin: 0 auto;
 }
@@ -23,4 +20,35 @@ body {
 
 #content div:nth-child(even) {
     background: #777;
+}
+
+.one {
+    /*grid-column-start: 1;
+    grid-column-end: 3;*/
+    grid-column: 1/3;
+    grid-row: 1/3;  
+}
+
+.two {
+    grid-column: 3/7;
+}
+
+.three {
+    grid-column: 3/5;
+    grid-row: 2/5;
+}
+
+.six {
+    grid-column: 1/3;
+    grid-row: 3/5;
+}
+
+.five {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.four {
+    grid-column: 5/7;
+    grid-row: 3/5;
 }
