--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,8 +6,7 @@ body {
 
 #content {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(4, minmax(150px, auto));
+    grid-template-columns: repeat(3, 1fr);    
     grid-gap: 10px;
     max-width: 960px;
     margin: 0 auto;
@@ -22,33 +21,16 @@ body {
     background: #777;
 }
 
-.one {
-    /*grid-column-start: 1;
-    grid-column-end: 3;*/
-    grid-column: 1/3;
-    grid-row: 1/3;  
+
+.nested {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5px;
+    grid-column: span 3;
 }
 
-.two {
-    grid-column: 3/7;
-}
-
-.three {
-    grid-column: 3/5;
-    grid-row: 2/5;
-}
-
-.six {
-    grid-column: 1/3;
-    grid-row: 3/5;
-}
-
-.five {
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-
-.four {
-    grid-column: 5/7;
-    grid-row: 3/5;
+.nested p {
+    border: 2px solid #fff;
+    padding: 20px;
+    margin: 0;
 }
