--- a/css/syntax.css
+++ b/css/syntax.css
@@ -7,9 +7,12 @@ body {
 #content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);    
+    grid-auto-rows: minmax(150px, auto);
     grid-gap: 10px;
     max-width: 960px;
     margin: 0 auto;
+    /*align-items: start;
+    justify-items: start;*/
 }
 
 #content div {
@@ -21,16 +24,20 @@ body {
     background: #777;
 }
 
-
-.nested {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 5px;
-    grid-column: span 3;
+.one {
+    justify-self: start;
 }
 
-.nested p {
-    border: 2px solid #fff;
-    padding: 20px;
-    margin: 0;
+.two {
+    align-self: end;
+}
+
+.six {
+    justify-self: start;
+    align-self: end;
+}
+
+.three {
+    justify-self: center;
+    align-self: center;
 }
