--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,38 +6,67 @@ body {
 
 #content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);    
-    grid-auto-rows: minmax(150px, auto);
-    grid-gap: 10px;
+    grid-template-columns: repeat(12, 1fr); grid-auto-rows: minmax(100px, auto);
+    grid-gap: 10px;      
     max-width: 960px;
     margin: 0 auto;
-    /*align-items: start;
-    justify-items: start;*/
+    position: relative;
 }
 
-#content div {
+header {
+    grid-column: 1/13;
+}
+
+main {
+    grid-column: 4/13;
+    grid-row: 2/4;
+}
+
+aside {
+    grid-column: 1/4;
+    grid-row: 2/3;
+}
+
+section {
+    grid-column: 1/13;
+    grid-row: 4/7;
+}
+
+nav {
+    grid-column: 1/4;
+    grid-row: 3/4;
+}
+
+footer {
+    grid-column: 1/13;
+}
+
+#content > * {
     background: #3bbced;
     padding: 30px;
 }
-
-#content div:nth-child(even) {
-    background: #777;
+#grid {
+    display: grid;
+    position: absolute;
+    top: 0;
+    left: 0;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(100%, auto);
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    padding: 0;
+    display: none;
 }
 
-.one {
-    justify-self: start;
+#grid p {
+    border: 1px solid;
+    background: #000;
+    margin: 0;
+    opacity: 0.2;
+
 }
 
-.two {
-    align-self: end;
-}
-
-.six {
-    justify-self: start;
-    align-self: end;
-}
-
-.three {
-    justify-self: center;
-    align-self: center;
+input:checked + #content #grid{
+    display: grid;
 }
