--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,67 +6,46 @@ body {
 
 #content {
     display: grid;
-    grid-template-columns: repeat(12, 1fr); grid-auto-rows: minmax(100px, auto);
-    grid-gap: 10px;      
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 10px;     
     max-width: 960px;
     margin: 0 auto;
-    position: relative;
 }
 
-header {
-    grid-column: 1/13;
+#content div:nth-child(even) {
+    background: #222525;
 }
 
-main {
-    grid-column: 4/13;
-    grid-row: 2/4;
-}
-
-aside {
-    grid-column: 1/4;
-    grid-row: 2/3;
-}
-
-section {
-    grid-column: 1/13;
-    grid-row: 4/7;
-}
-
-nav {
-    grid-column: 1/4;
-    grid-row: 3/4;
-}
-
-footer {
-    grid-column: 1/13;
-}
-
-#content > * {
-    background: #3bbced;
+#content div {
+    background: #83b2b6;
     padding: 30px;
 }
-#grid {
-    display: grid;
-    position: absolute;
-    top: 0;
-    left: 0;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(100%, auto);
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    padding: 0;
-    display: none;
+
+
+
+.one {
+    grid-column: 1/3;
+    grid-row: 1/5;
 }
 
-#grid p {
-    border: 1px solid;
-    background: #000;
-    margin: 0;
-    opacity: 0.2;
-
+.two {
+    grid-column: 3/7;
+    grid-row: 1/3;
 }
 
-input:checked + #content #grid{
-    display: grid;
+.three {
+    grid-column: 3/5;
+    grid-row: 3/5;
 }
+
+.four {
+    grid-column: 5/7;
+    grid-row: 3/7;
+}
+
+.five {
+    grid-column: 1/5;
+    grid-row: 5/7;
+}
+
