--- a/css/syntax.css
+++ b/css/syntax.css
@@ -2,50 +2,52 @@ body {
     color: #fff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
+    
 }
 
 #content {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(150px, auto);
     grid-gap: 10px;     
     max-width: 960px;
     margin: 0 auto;
+    grid-template-areas: 
+    "one one one one"
+    "two . three three"
+    "four four three three"
+    "five five five five";
+    
 }
 
-#content div:nth-child(even) {
-    background: #222525;
-}
-
-#content div {
-    background: #83b2b6;
+#content > * {
     padding: 30px;
+    background: #0a413f;
+  
 }
-
-
 
 .one {
-    grid-column: 1/3;
-    grid-row: 1/5;
+    grid-area: one;
 }
 
 .two {
-    grid-column: 3/7;
-    grid-row: 1/3;
+    grid-area: two;
 }
 
 .three {
-    grid-column: 3/5;
-    grid-row: 3/5;
+    grid-area: three;
 }
 
 .four {
-    grid-column: 5/7;
-    grid-row: 3/7;
+    grid-area: four;
 }
 
 .five {
-    grid-column: 1/5;
-    grid-row: 5/7;
+    grid-area: five;
 }
+
+
+
+
+
 
