--- a/css/syntax.css
+++ b/css/syntax.css
@@ -5,6 +5,7 @@ body {
     
 }
 
+
 #content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -14,11 +15,29 @@ body {
     margin: 0 auto;
     grid-template-areas: 
     "one one one one"
-    "two . three three"
+    "five five five five"
+    "two two two two"
+    "four four three three";
+    }
+
+@media screen and (min-width: 760px){
+#content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 10px;     
+    max-width: 960px;
+    margin: 0 auto;
+    grid-template-areas: 
+    "one one one one"
+    "two two three three"
     "four four three three"
     "five five five five";
-    
+    }
 }
+
+
+
 
 #content > * {
     padding: 30px;
